Fix banner alignment

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header li {
 #first-section .side-content {
   justify-content: left;
   align-self: center;
+  
  
 }
 
@@ -74,10 +75,12 @@ header li {
   padding-bottom: 20px;
   text-align: left;
   font-weight: bolder;
+  padding-right: 200px;
 }
   
-#first-section h5 {
+#first-section h4 {
   padding-bottom: 20px;
+  padding-right: 250px;
 }
   
 #first-section a {
